; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_input.c_MRLSections.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_input.c_MRLSections.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32*, i32*, i32*)* @MRLSections to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @MRLSections(i8* %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %15 = load i32*, i32** %10, align 8
  store i32 -1, i32* %15, align 4
  %16 = load i32*, i32** %9, align 8
  store i32 -1, i32* %16, align 4
  %17 = load i32*, i32** %8, align 8
  store i32 -1, i32* %17, align 4
  %18 = load i32*, i32** %7, align 8
  store i32 -1, i32* %18, align 4
  %19 = load i8*, i8** %6, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %5
  br label %55

22:                                               ; preds = %5
  %23 = load i8*, i8** %6, align 8
  %24 = load i8, i8* %23, align 1
  %25 = sext i8 %24 to i32
  %26 = icmp ne i32 %25, 45
  br i1 %26, label %27, label %30

27:                                               ; preds = %22
  %28 = load i8*, i8** %6, align 8
  %29 = call i8* @MRLSeekPoint(i8* %28, i32* %11, i32* %12)
  store i8* %29, i8** %6, align 8
  br label %31

30:                                               ; preds = %22
  store i32 -1, i32* %12, align 4
  store i32 -1, i32* %11, align 4
  br label %31

31:                                               ; preds = %30, %27
  %32 = load i8*, i8** %6, align 8
  %33 = load i8, i8* %32, align 1
  %34 = sext i8 %33 to i32
  %35 = icmp eq i32 %34, 45
  br i1 %35, label %36, label %40

36:                                               ; preds = %31
  %37 = load i8*, i8** %6, align 8
  %38 = getelementptr inbounds i8, i8* %37, i64 1
  %39 = call i8* @MRLSeekPoint(i8* %38, i32* %13, i32* %14)
  store i8* %39, i8** %6, align 8
  br label %41

40:                                               ; preds = %31
  store i32 -1, i32* %14, align 4
  store i32 -1, i32* %13, align 4
  br label %41

41:                                               ; preds = %40, %36
  %42 = load i8*, i8** %6, align 8
  %43 = load i8, i8* %42, align 1
  %44 = icmp ne i8 %43, 0
  br i1 %44, label %45, label %46

45:                                               ; preds = %41
  br label %55

46:                                               ; preds = %41
  %47 = load i32, i32* %11, align 4
  %48 = load i32*, i32** %7, align 8
  store i32 %47, i32* %48, align 4
  %49 = load i32, i32* %13, align 4
  %50 = load i32*, i32** %8, align 8
  store i32 %49, i32* %50, align 4
  %51 = load i32, i32* %12, align 4
  %52 = load i32*, i32** %9, align 8
  store i32 %51, i32* %52, align 4
  %53 = load i32, i32* %14, align 4
  %54 = load i32*, i32** %10, align 8
  store i32 %53, i32* %54, align 4
  br label %55

55:                                               ; preds = %46, %45, %21
  ret void
}

declare dso_local i8* @MRLSeekPoint(i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
